log
Tue, May 13, 2025 11:26:15 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:66:7: error: implicit declaration of function 'addNode' [-Werror=implicit-function-declaration]
       addNode(list, new_node);
       ^~~~~~~
sudoku.c: In function 'find_first_empty':
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
Tue, May 13, 2025 11:26:59 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'find_first_empty':
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
27c562e
Tue, May 13, 2025 11:27:55 AM: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
37fa25c
Tue, May 13, 2025 11:30:22 AM: 
 sudoku.c | 23 +++++++++++------------
 1 file changed, 11 insertions(+), 12 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:5: error: expected ',' or ';' before 'for'
     for(i=0;i<9;i++){
     ^~~
sudoku.c:57:14: error: statement with no effect [-Werror=unused-value]
     for(i=0;i<9;i++){
             ~^~
sudoku.c:57:20: error: expected ';' before ')' token
     for(i=0;i<9;i++){
                    ^
sudoku.c:57:20: error: expected statement before ')' token
sudoku.c:65:21: error: break statement not within loop or switch
       if(flag == 1) break;
                     ^~~~~
cc1.exe: all warnings being treated as errors
556cc96
Tue, May 13, 2025 11:30:42 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 5/70
df9d51c
